syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.cshep4.premierpredictor.request";
package model;

message IdRequest {
    string id = 1;
}

message EmailRequest {
    string email = 1;
}

message PredictionRequest {
    string userId = 1;
    string matchId = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}